Fixed hover overlap on the bottom control buttons.

--- a/src/index.css
+++ b/src/index.css
@@ -235,6 +235,7 @@ body {
 
 .control-button > img {
   height: 75%;
+  width: var(--size);
 }
 
 /* Message Popup */
